2006-01-12  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* src/ephy-dbus.c: (ephy_dbus_connect_to_session_bus):

	Fix compiler warnings.

2006-01-11  Christian Persch  <chpe@cvs.gnome.org>

        * data/default-prefs-common.js:

	Disable <a ping>.
	
2006-01-11  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Add another contract ID check, only on gecko >= 1.8.

2006-01-11  Christian Persch  <chpe@cvs.gnome.org>

	* data/Makefile.am:

	Don't delete epiphany-fonts.schemas on make clean.

2006-01-11  Christian Persch  <chpe@cvs.gnome.org>

	* data/mime-types-permissions.xml:

	More mime types.

2006-01-10  Christian Persch  <chpe@cvs.gnome.org>

	* m4/gecko.m4:

	Fix gecko version check to use AC_EGREP_CPP instead of
	grepping the header file directly. Misc fixes.

2006-01-08  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/mozilla/EphyContentPolicy.h:
	* embed/mozilla/EphyContentPolicy.cpp: (ShouldLoad):
	* embed/ephy-embed.h:
	* embed/ephy-embed.c: (ephy_embed_base_init):

	EphyContentPolicy now emits a signal when a content is blocked.

2006-01-08  Christian Persch  <chpe@cvs.gnome.org>

	* data/Makefile.am:

	Fix pkgconfig_DATA.

2006-01-08  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	R data/epiphany-1.10.pc.in:
	A data/epiphany.pc.in:
	* m4/gecko.m4:

	Various improvements to gecko.m4. Generate the versioned .pc file
	from the unversioned .pc.in file.

2006-01-05  thetroublemaker  <thetroublemaker@inventati.org>

	* src/ephy-notebook.c:

	changed ephy_tab_get_title_composite to ephy_tab_get_title,
	so that now 'Loading ' is not displayed when loadin' a new
	tab. Bug #323468.

2006-01-08  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c: (ephy_window_delete_event):

	Exit ppv mode when clicking the window close button. Bug #326136.

2006-01-08  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/ContentHandler.cpp:

	Make ESC cancel the content handler dialogue. Bug #325811.
