@@ -21,4 +21,12 @@ DISTCLEANFILES = 		\
 	intltool-update		\
 	gnome-doc-utils.make
 
-DISTCHECK_CONFIGURE_FLAGS = --enable-python --enable-gtk-doc --disable-schemas-install --disable-scrollkeeper --with-gecko=$(MOZILLA)
+DISTCHECK_CONFIGURE_FLAGS = \
+	--enable-python			\
+	--enable-zeroconf		\
+	--enable-desktop-file-plugin	\
+	--enable-certificate-manager	\
+	--enable-gtk-doc		\
+	--disable-schemas-install	\
+	--disable-scrollkeeper		\
+	--with-gecko=$(MOZILLA)
